fix cropped content faq

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -444,7 +444,7 @@ body {
 }
 
 .faq-content.active {
-  max-height: 1000px;
+  max-height: 3000px;
   opacity: 1;
   padding-top: 1.5rem;
 }
